--- a/client/src/containers/Layout/Navbar.css
+++ b/client/src/containers/Layout/Navbar.css
@@ -5,18 +5,62 @@
 	font-weight: lighter;
 	padding:10px 30px;
 	position: relative;
+	/*margin-bottom: 20px;*/
 	width: 100%;
-	z-index: 100;
+	
 }
 
 
 .ul {
 	float: right;
+	display: flex;
+	justify-content: flex-end;
 	
 }
 
 .li {
-	display: inline-block;
+	/*display: inline-block;*/
 	margin:0 15px;
 	list-style: none;
+}
+
+
+.ham {
+display: none;
+}
+
+.ham div{
+	width: 10px;
+	border: 1px solid black;
+	/*padding: 5px;*/
+	display: none;
+}
+
+
+
+
+@media(max-width : 580px)
+{
+	nav .ul {
+		display: none;
+	}
+
+	.ham {
+		
+		margin-bottom:3px;
+		display: flex;
+		justify-content: flex-end;
+		width: 20px;
+		border: 2px solid darkslategrey;
+		/*padding: 5px;*/
+	}
+
+
+}
+
+@media(min-width:581px)
+{
+	.ham{
+		display: none;
+	}
 }
