--- a/client/src/components/LayoutItems/middle.css
+++ b/client/src/components/LayoutItems/middle.css
@@ -1,17 +1,23 @@
 .image {
-	background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("../../showcase.png");
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.8)), url("../../showcase.png");
 	background-size: cover;
 	background-position: center;
 	height:100vh;
 	margin-bottom: -50px;
 	color:black;
+	width: 100%;
+	top: 0;
+	left: 0;
+	/*width: 100vw;*/
 	
 }
 
 .text {
 	font-size: 25px;
-	font-weight: 350;
-	padding:50vh;
+	/*font-weight: 550;*/
+	padding:50vh 0;
+	position: relative;
 	text-align:center;
+
 
 }
